nim: Introduce sampled_probs
